<resources>
    <string name="app_name">Tanam.in</string>
    <string name="app_logo_splash">App Logo Splash</string>

    <string name="email_input">Silahkan masukan alamat email anda.</string>
    <string name="email_error">Alamat email salah.</string>
    <string name="pass_input">Silahkan masukkan kata sandi anda.</string>
    <string name="pass_error">Kata sandi tidak boleh kurang dari 6 karakter.</string>
    <string name="name_input">Silahkan masukan nama anda.</string>
    <string name="name_error">Nama tidak boleh lebih dari 30 karakter.</string>
    <string name="background_logo">Latar Belakang Logo</string>
    <string name="app_logo">Logo Aplikasi</string>
    <string name="welcome_login">Selamat datang!</string>
    <string name="please_use_your_own_account_to_enter">Silahkan gunakan akun anda untuk masuk.</string>
    <string name="email_address">Alamat Email</string>
    <string name="don_t_have_an_account_sign_up">Belum memiliki akun? Daftar disini</string>
    <string name="login">Masuk</string>
    <string name="password">Kata Sandi</string>
    <string name="register_button_text">Daftar</string>
    <string name="already_have_an_account_sign_in">Sudah memiliki akun? Masuk disini</string>
    <string name="greetings">Salam!</string>
    <string name="fill_this_form_to_create_your_new_account">Silahkan isi form ini untuk membuat akun baru.</string>
    <string name="register_welcome_image">Gambar Awal Pendaftaran</string>
    <string name="name_register">Nama Lengkap</string>

    <string name="class_detail_title">Detail Kelas</string>
    <string name="class_detail_tablayouttext1">Silabus</string>
    <string name="class_detail_tablayouttext2">Forum</string>
    <string name="class_detail_silabus_button_text">Mulai Belajar</string>

    <string name="class_nav">Kelas</string>
    <string name="home_nav">Home</string>
    <string name="detection_nav">Deteksi</string>
    <string name="profile_nav">Profil</string>

    <string name="name_home">Hai,</string>
    <string name="home_message">Apa kabar mu hari ini?</string>
    <string name="home_illustration">Ilustrasi Halaman Home</string>
    <string name="continue_title">Lanjutkan dari :</string>
    <string name="fast_access">Akses Cepat</string>
    <string name="marketplace">Marketplace Button</string>
    <string name="encyclopedia">Encyclopedia Button</string>
    <string name="continue_text">Lanjut</string>

    <string name="class_illustration">Class Illustration</string>
    <string name="classes_message">Mau belajar apa hari ini?</string>
    <string name="module_next_button_text">Selanjutnya</string>
    <string name="module_prev_button_text">Sebelumnya</string>
    <string name="future_feature_text">Fitur Masa Depan</string>
    <string name="future_feature_desc">Fitur dalam masa pengembangan</string>
    <string name="read_more">Baca Selengkapnya</string>
    <string name="nutritional_information_text">Informasi Gizi</string>
    <string name="nutritional_content">Kandungan</string>
    <string name="nutritional_benefit">Benefit</string>
    <string name="edit_profile_text">Ubah Data Diri</string>
    <string name="edit_profile_fullname">Nama Lengkap</string>
    <string name="edit_profile_fullname_hint">Nama lengkap Anda</string>
    <string name="edit_profile_age">Umur</string>
    <string name="edit_profile_age_hint">Umur Anda</string>
    <string name="edit_profile_address">Alamat</string>
    <string name="edit_profile_address_hint">Alamat Anda</string>
    <string name="edit_profile_save_button">Simpan</string>

    <string name="take_picture_button">Ambil Gambar</string>
    <string name="flip_camera_button">Balik Kamera</string>

    <string name="statistic_title">Statistik</string>
    <string name="class_finished">Class Finished Icon</string>
    <string name="class_process">Class Process Icon</string>
    <string name="profile_information_title">Data Diri</string>
    <string name="age_title_profile">Umur</string>
    <string name="address_title_profile">Alamat Rumah</string>
    <string name="no_data">Tidak ada data</string>
    <string name="change_profile">Ubah Data</string>
    <string name="zero_process">0 Proses</string>
    <string name="zero_finished">0 Selesai</string>
    <string name="logout_button">Logout Button</string>
    <string name="onboarding_item_1">Gambar Onboarding 1</string>
    <string name="onboarding_item_2">Gambar Onboarding 2</string>
    <string name="onboarding_item_3">Gambar Onboarding 3</string>
    <string name="app_logo_onboarding">App Logo Onboarding</string>
    <string name="learn_easy">Belajar Tanpa Hambatan</string>
    <string name="learn_easy_content">Belajar dari manapun dan kapanpun melalui internet.</string>
    <string name="learn_from_others">Dapatkan dan Berikan Bantuan</string>
    <string name="learn_from_others_content">Bantu orang lain dan dapat bantuan belajar.</string>
    <string name="get_started">Mulai</string>
    <string name="build_community">Bangun Komunitas</string>
    <string name="build_community_content">Bangun komunitas belajar yang aman dan nyaman.</string>
    <string name="failed_open_camera">Kamera Gagal Dibuka</string>
    <string name="permission_negative">Akses kamera tidak diberikan</string>
    <string name="close_button">Tutup</string>
    <string name="status_icon">Ikon Status</string>
    <string name="status">Status Dialog</string>
    <string name="failed_capture">Gagal Mengambil Gambar</string>
    <string name="cancel">Batal</string>
    <string name="logout">Keluar</string>
    <string name="are_you_sure_want_to_logout">Apakah anda ingin keluar dari akun anda?</string>
    <string name="see_detail">Lihat Detail</string>
    <string name="back_button_action_bar">Tombol Mundur</string>
    <string name="silabus_icon">Ikon Silabus</string>
    <string name="module_icon">Ikon Modul</string>
    <string name="future_feature_icon">Ikon Fitur Masa Depan</string>

    <string name="back_button_text">Kembali</string>
    <string name="profil_button_text">Profil</string>
    <string name="finished_class_desc">Anda telah berhasil menyelesaikan</string>
    <string name="finished_class_illustration">Finished Class Illustration</string>
    <string name="image_slider_item">Gambar Kelas</string>
    <string name="me_chat">Saya</string>
    <string name="enter_message">Masukkan pesan</string>
    <string name="send_chat">Kirim</string>
    <string name="forum_title">Judul Pertanyaan</string>
    <string name="forum_title_hint">Judul pertanyaan Anda</string>
    <string name="forum_question">Detail Pertanyaan</string>
    <string name="forum_question_hint">Jelaskan pertanyaan Anda</string>
    <string name="forum_send">Kirim Pertanyaan</string>
    <string name="new_forum">Mulai Bertanya</string>
    <string name="home_no_class">Anda belum mengikuti kelas</string>
    <string name="hint_search">Nama kelas …</string>
    <string name="info_no_class">Silahkan ikuti salah satu kelas untuk mulai melacak kemajuan anda.</string>
    <string name="read_more_button">Baca Selanjutnya</string>
    <string name="no_connection">Anda tidak terkoneksi internet.</string>
    <string name="info_no_internet">Silahkan sambungkan dengan internet untuk melihat akses materi terakhir anda.</string>
    <string name="info_no_forum_internet">Silahkan sambungkan dengan internet untuk melihat diskusi forum.</string>
    <string name="info_no_class_internet">Silahkan sambungkan dengan internet untuk melihat daftar kelas yang ada.</string>
    <string name="info_no_module_internet">Silahkan sambungkan dengan internet untuk melihat daftar materi yang ada.</string>
    <string name="no_class_found">Silahkan coba kata kunci lain pada kolom pencarian.</string>
    <string name="no_class">Kelas tidak ditemukan.</string>
    <string name="no_module">Belum ada materi.</string>
    <string name="no_module_info">Tidak ada materi yang terkait dengan kelas ini.</string>
    <string name="continue_study">Lanjut Belajar</string>
    <string name="no_reply">Belum ada balasan.</string>
    <string name="no_reply_info">Ayo mulai bantu menjawab pertanyaan.</string>
    <string name="class_requirement">Prasyarat Kelas</string>
    <string name="requirement">Prasyarat</string>
    <string name="confirm_edit_profile">Perubahan profil Anda tidak akan tersimpan. Apakah Anda ingin menyimpannya ?</string>
    <string name="change_button">Simpan Perubahan</string>
    <string name="quiz_title">Kuis</string>
    <string name="time_remaining">Sisa waktu: 09.59</string>
    <string name="number_1">1</string>
    <string name="start_from">Mulai dari :</string>
    <string name="info_start_quiz">Anda akan memulai kuis untuk menilai proses belajar anda. Silahkan persiapkan diri anda. Waktu yang diberikan adalah 10 menit.</string>
    <string name="requirement_info">Prasyarat dan kriteria yang harus dipenuhi untuk lulus dari kelas. Fitur dalam pengembangan.</string>
    <string name="congratulation_quiz">Selamat anda lulus kuis!</string>
    <string name="not_pass_quiz">Anda belum lulus kuis.</string>
    <string name="no_detected">Tidak dapat mendeteksi. Silahkan ulangi lagi.</string>
</resources>